sort.basic.bubble.AlgBubbleSort2.scala.error
Compilation error:
AlgBubbleSort2:17: error: ')' expected but '}' found.
          }
          ^